<resources>
    <string name="app_name">NYT</string>
    <string name="app_title">The NYT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_bell">Bell</string>
    <string name="label_most_popular">Most Popular</string>
    <string name="label_movie_review">Movie Review</string>
    <string name="label_geographic">Geographic</string>
    <string name="label_best_seller">Best Seller</string>
    <string name="label_saved_content">Saved Content</string>

    <string name="title_activity_feed_detail_page">FeedDetailPage</string>
    <string name="title_activity_jsoup_detail_page">JsoupActivity</string>
    <string name="acra_crash_report">Bug Reported</string>
    <string name="label_share">Check out the  News on   </string>
    <string name="label_checkout_app">Hey Check out this Beautiful App</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="label_text_size_small">Small Text</string>
    <string name="label_text_size_large">Large Text</string>
    <string name="label_text_size_normal">normal text </string>
    <string name="label_handle_brightness">show Brightness</string>
    <string name="label_change_brightness">Set Brightness</string>
    <string name="label_loading_feed">Loading News Feed</string>
    <string name="label_clear_cache">Clear cache</string>
    <string name="title_text_size">Text Size</string>
    <string name="label_change_text_size">Change Text Size</string>
    <string name="label_back_pressed">Press back again to leave</string>
    <string name="label_clear_images">Dont save Images Offline</string>
    <string name="title_activity_force_close_page">ForceClose</string>
    <string name="label__login">Login</string>
    <string name="signed_in_fmt">signed in</string>
    <string name="label_clear_saved_content">Clear Saved Content</string>
    <string name="label_no_content">No content saved</string>
    <string name="title_activity_zoom">ZoomActivity</string>
    <string name="title_share_title">Share app via</string>

</resources>
